[tool.poetry]
name = "blackwatch"
version = "0.1.0"
description = ""
authors = ["Naveen Anil <blackwatch@nvn-nil.in>"]

[tool.poetry.dependencies]
python = "^3.9"
cleo = "^0.8.1"
watchdog = "^2.0.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.1"
twine = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
